--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
-  "version": 2
+  "version": 2,
+  "builds": [
+    { "src": "public/**/*", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/public/index.html" }
+  ]
 }
 
