--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
 {
-  "buildCommand": "echo 'No build needed'",
-  "outputDirectory": "public",
+  "version": 2,
+  "builds": [
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
   ]
 }
 
